[LFC] Fix formatting context root for inflow positioned inline containers https://bugs.webkit.org/show_bug.cgi?id=199551 <rdar://problem/52728868>

Reviewed by Antti Koivisto.

Relatively positioned (inflow) inline container lives in the formatting context where its parent lives unless
the parent establishes a formatting context. This is slightly different from the usual behavior which is containing block driven.

div id=outer style="position: absolute">><div id=inner><span style="position: relative">content</span></div></div>

While the relatively positioned inline container (span) is placed relative to its containing block "outer", it lives in the inline formatting context established by "inner".

* layout/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::layoutOutOfFlowDescendants const):
* layout/layouttree/LayoutBox.cpp:
(WebCore::Layout::Box::formattingContextRoot const):
* layout/layouttree/LayoutBox.h:
* layout/layouttree/LayoutInlineContainer.cpp:
(WebCore::Layout::InlineContainer::formattingContextRoot const):
* layout/layouttree/LayoutInlineContainer.h:


Canonical link: https://commits.webkit.org/213457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247198 268f45cc-cd09-0410-ab3c-d52691b4dbfc