Source/WebCore/layout/layouttree/LayoutBox.h
@@ -97,7 +97,7 @@ public:
     bool isFloatingOrOutOfFlowPositioned() const { return isFloatingPositioned() || isOutOfFlowPositioned(); }
 
     const Container* containingBlock() const;
-    const Container& formattingContextRoot() const;
+    virtual const Container& formattingContextRoot() const;
     const Container& initialContainingBlock() const;
 
     bool isDescendantOf(const Container&) const;
